# video_hosting

./: .env.example  .gitignore  Dockerfile.webpack  README.md  media_compressor.py  package.json  pyproject.toml  telegram_bot_main.py  webpack.config.js
mongodb_backup/: videos.metadata.json
mongodb_backup/video_hosting/: videos.bson
optimized/src/static/css/: common.min.121bb7180e1b90be.css  main-page-v3.min.7309e6f7f633c75b.css  main-v3.min.716ab6e5b2568b3a.css  main.css  video.css
optimized/templates/: main.html  video.html
src/: main.py  reload.sh  run_with_reload.sh  run_with_reload_prod.sh
src/static/css/: common.min.121bb7180e1b90be.css  main-page-v3.min.7309e6f7f633c75b.css  main-v3.min.716ab6e5b2568b3a.css  main.css  video.css
templates/: main.html  video.html
